--- a/Test2/Doyle Addin.vbproj
+++ b/Test2/Doyle Addin.vbproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net8.0-windows10.0.26100.0</TargetFramework>
+    <TargetFramework>net8.0-windows8.0</TargetFramework>
 	  <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <OutputType>Library</OutputType>
     <StartupObject>
@@ -61,6 +61,8 @@
     <NeutralLanguage>en</NeutralLanguage>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/Bmassner/Doyle-AddIn</RepositoryUrl>
+    <AssemblyVersion>$(GitVersion_FullSemVer)</AssemblyVersion>
+    <FileVersion>$(GitVersion_FullSemVer)</FileVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Update="System">
