Adding update script to see if this works

--- a/Doyle Addin/Doyle Addin.csproj
+++ b/Doyle Addin/Doyle Addin.csproj
@@ -106,6 +106,9 @@
     <None Include="Updater.bat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="Updater.bat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
