Add "Obsolete Print" feature with user options toggle and button integration
Signed-off-by: Levi Erskine <LErskine@DOYLEMFG.COM>

--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,4 @@ FodyWeavers.xsd
 /.gitignore
 /.idea/.idea.Doyle Addin/.idea/codeStyles/codeStyleConfig.xml
 /.idea/workspace.xml
+/.vscode/settings.json
