--- a/.gitignore
+++ b/.gitignore
@@ -366,3 +366,7 @@ FodyWeavers.xsd
 /.idea/.idea.Doyle Addin/.idea/codeStyles/codeStyleConfig.xml
 /.idea/workspace.xml
 /.vscode/settings.json
+/Test2/Resources/OldVersions
+/Test2/Resources/ObsoleteLibrary.idw
+/Test2/Resources/OldVersions
+/Test2/Resources/ObsoleteLibrary.idw
